changed q1 to jnp

--- a/TEAM-ID_TEAM-NAME_YOUR-NAME_Project-1.ipynb
+++ b/TEAM-ID_TEAM-NAME_YOUR-NAME_Project-1.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -110,35 +110,41 @@
      "output_type": "stream",
      "text": [
       "The 1th optimized position is:\n",
-      "[-2.16840434e-18  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-1.6298145e-09  1.0000000e+00  1.8999999e+00  2.9000001e+00\n",
+      "  9.9999994e-02] \n",
+      "\n",
       "The 2th optimized position is:\n",
-      "[-4.4408921e-19  1.0000000e+00  1.9000000e+00  2.9000000e+00\n",
-      "  1.0000000e-01]\n",
+      "[3.5762726e-10 1.0000000e+00 1.9000000e+00 2.9000001e+00 1.0000003e-01] \n",
+      "\n",
       "The 3th optimized position is:\n",
-      "[-8.32667268e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-2.0861779e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  1.0000000e-01] \n",
+      "\n",
       "The 4th optimized position is:\n",
-      "[3.33066907e-19 1.00000000e+00 1.90000000e+00 2.90000000e+00\n",
-      " 1.00000000e-01]\n",
+      "[-3.278276e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
+      "\n",
       "The 5th optimized position is:\n",
-      "[-2.77555756e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-3.2782785e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  1.0000000e-01] \n",
+      "\n",
       "The 6th optimized position is:\n",
-      "[-2.77555756e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-3.278272e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
+      "\n",
       "The 7th optimized position is:\n",
-      "[-2.77555756e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-3.2782746e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  1.0000000e-01] \n",
+      "\n",
       "The 8th optimized position is:\n",
-      "[-2.77555756e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-3.278277e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
+      "\n",
       "The 9th optimized position is:\n",
-      "[-2.77555756e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n",
+      "[-3.2782707e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  1.0000000e-01] \n",
+      "\n",
       "The 10th optimized position is:\n",
-      "[-2.77555756e-19  1.00000000e+00  1.90000000e+00  2.90000000e+00\n",
-      "  1.00000000e-01]\n"
+      "[-3.2782732e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  1.0000000e-01] \n",
+      "\n"
      ]
     }
    ],
@@ -162,14 +168,21 @@
     "        f.append(fn(x[i], u[i]) - x[i+1])\n",
     "    f.append(fn(x[0], u[4]) - x[4]) \n",
     "    f.append(x[0] - 0)\n",
-    "    f = np.array(f)\n",
+    "    f = jnp.array(f)\n",
     "    return f\n",
     "# print(f.shape)\n",
     "# print(f.T @ f)\n",
-    "omega = np.linalg.inv(np.diag([0.01, 0.01, 0.01, 0.01, 0.01, 0.001]))\n",
+    "cov = jnp.array([\n",
+    "    [0.01, 0, 0, 0, 0, 0],\n",
+    "    [0, 0.01, 0, 0, 0, 0],\n",
+    "    [0, 0, 0.01, 0, 0, 0],\n",
+    "    [0, 0, 0, 0.01, 0, 0],\n",
+    "    [0, 0, 0, 0, 0.01, 0],\n",
+    "    [0, 0, 0, 0, 0, 0.001]\n",
+    "])\n",
+    "omega = jnp.linalg.inv(cov)\n",
     "# print(omega)\n",
-    "H = J.T @ omega @ J\n",
-    "J = np.array([\n",
+    "J = jnp.array([\n",
     "    [1, -1, 0, 0, 0],\n",
     "    [0, 1, -1, 0, 0],\n",
     "    [0, 0, 1, -1, 0],\n",
@@ -177,15 +190,19 @@
     "    [1, 0, 0, 0, -1],\n",
     "    [1, 0, 0, 0, 0]\n",
     "]) # this will be the same for all instances since f() is defined in the same way at all times\n",
+    "H = J.T @ omega @ J\n",
     "# print(J)\n",
     "for i in range(10):\n",
+    "#     x_new = jnp.array([])\n",
     "    ff = f(x)\n",
+    "#     print(ff)\n",
     "    b = J.T @ omega.T @ ff\n",
-    "    del_x = -1 * np.linalg.inv(H) @ b\n",
+    "    del_x = -1 * jnp.linalg.inv(H) @ b\n",
     "#     print(del_x)\n",
-    "    x = np.array(x + del_x)\n",
+    "    x = jnp.array(x) + del_x\n",
     "    print(\"The \" + str(i+1) + \"th\" + \" optimized position is:\")\n",
-    "    print(x)\n",
+    "    print(x, \"\\n\")\n",
+    "#     x = x_new\n",
     "#     print(x.shape)\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
