--- a/TEAM-ID_TEAM-NAME_YOUR-NAME_Project-1.ipynb
+++ b/TEAM-ID_TEAM-NAME_YOUR-NAME_Project-1.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,48 +102,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using analytically calculated Jacobian:\n",
+      "\n",
+      "[0.0, 1.1, 2.1, 3.2, 0.5]\n",
       "The 1th optimized position is:\n",
       "[-1.6298145e-09  1.0000000e+00  1.8999999e+00  2.9000001e+00\n",
       "  9.9999994e-02] \n",
       "\n",
       "The 2th optimized position is:\n",
-      "[3.5762726e-10 1.0000000e+00 1.9000000e+00 2.9000001e+00 1.0000003e-01] \n",
+      "[3.5762859e-10 1.0000000e+00 1.9000000e+00 2.9000001e+00 1.0000003e-01] \n",
       "\n",
       "The 3th optimized position is:\n",
-      "[-2.0861779e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "[-2.0861607e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
       "  1.0000000e-01] \n",
       "\n",
       "The 4th optimized position is:\n",
-      "[-3.278276e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
+      "[-3.2782632e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  1.0000000e-01] \n",
       "\n",
       "The 5th optimized position is:\n",
-      "[-3.2782785e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "[-3.2782613e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
       "  1.0000000e-01] \n",
       "\n",
-      "The 6th optimized position is:\n",
-      "[-3.278272e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
+      "Using jax's Jacobian:\n",
       "\n",
-      "The 7th optimized position is:\n",
-      "[-3.2782746e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "The 1th optimized position is:\n",
+      "[-1.6298145e-09  1.0000001e+00  1.9000000e+00  2.8999999e+00\n",
+      "  9.9999934e-02] \n",
+      "\n",
+      "The 2th optimized position is:\n",
+      "[-3.5762593e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  9.9999979e-02] \n",
+      "\n",
+      "The 3th optimized position is:\n",
+      "[-6.5565198e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
+      "  9.9999994e-02] \n",
+      "\n",
+      "The 4th optimized position is:\n",
+      "[-1.1921003e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
       "  1.0000000e-01] \n",
       "\n",
-      "The 8th optimized position is:\n",
-      "[-3.278277e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
-      "\n",
-      "The 9th optimized position is:\n",
-      "[-3.2782707e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
-      "  1.0000000e-01] \n",
-      "\n",
-      "The 10th optimized position is:\n",
-      "[-3.2782732e-10  1.0000000e+00  1.9000000e+00  2.9000001e+00\n",
-      "  1.0000000e-01] \n",
+      "The 5th optimized position is:\n",
+      "[-3.278261e-10  1.000000e+00  1.900000e+00  2.900000e+00  1.000000e-01] \n",
       "\n"
      ]
     }
@@ -157,16 +164,14 @@
     "u_gt = [1.0, 1.0, 1.0, -3.0, 0.0]\n",
     "x = [0.0]\n",
     "x_gt = [0.0]\n",
-    "for i in range(len(u)-1):\n",
-    "    x.append(fn(x[i], u[i]))\n",
-    "    x_gt.append(fn(x_gt[i], u_gt[i]))\n",
+    "\n",
     "# print(x)\n",
     "# f = np.array([fn(x[0],u[0])-x[1], ])\n",
     "def f(x):\n",
     "    f = []\n",
     "    for i in range(4):\n",
-    "        f.append(fn(x[i], u[i]) - x[i+1])\n",
-    "    f.append(fn(x[0], u[4]) - x[4]) \n",
+    "        f.append((x[i]+u[i])-x[i+1])\n",
+    "    f.append(x[0]+ u[4] - x[4]) \n",
     "    f.append(x[0] - 0)\n",
     "    f = jnp.array(f)\n",
     "    return f\n",
@@ -190,20 +195,31 @@
     "    [1, 0, 0, 0, -1],\n",
     "    [1, 0, 0, 0, 0]\n",
     "]) # this will be the same for all instances since f() is defined in the same way at all times\n",
-    "H = J.T @ omega @ J\n",
-    "# print(J)\n",
-    "for i in range(10):\n",
-    "#     x_new = jnp.array([])\n",
-    "    ff = f(x)\n",
-    "#     print(ff)\n",
-    "    b = J.T @ omega.T @ ff\n",
-    "    del_x = -1 * jnp.linalg.inv(H) @ b\n",
-    "#     print(del_x)\n",
-    "    x = jnp.array(x) + del_x\n",
-    "    print(\"The \" + str(i+1) + \"th\" + \" optimized position is:\")\n",
-    "    print(x, \"\\n\")\n",
-    "#     x = x_new\n",
-    "#     print(x.shape)\n",
+    "\n",
+    "def run_optimizer(J,omega,x):\n",
+    "    H = J.T @ omega @ J\n",
+    "    for i in range(5):\n",
+    "        ff = f(x)\n",
+    "        b = J.T @ omega.T @ ff\n",
+    "        del_x = -1 * jnp.linalg.inv(H) @ b\n",
+    "        x = jnp.array(x) + del_x\n",
+    "        print(\"The \" + str(i+1) + \"th\" + \" optimized position is:\")\n",
+    "        print(x, \"\\n\")\n",
+    "\n",
+    "\n",
+    "print (\"Using analytically calculated Jacobian:\\n\")\n",
+    "for i in range(len(u)-1):\n",
+    "    x.append(fn(x[i], u[i]))\n",
+    "    x_gt.append(fn(x_gt[i], u_gt[i]))\n",
+    "print (x)\n",
+    "x0 = jnp.array(x)\n",
+    "run_optimizer(J,omega,x)\n",
+    "print (\"Using jax's Jacobian:\\n\")\n",
+    "f_new = lambda x: f(x) \n",
+    "J_new = jacfwd(f_new) #J doesn't change with change in x as f is linear w.r.t each element of x\n",
+    "J1 = J_new(x0)\n",
+    "# print (J1)\n",
+    "run_optimizer(J1,omega,x0)\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
@@ -442,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
