--- a/TEAM-ID_TEAM-NAME_YOUR-NAME_Project-1.ipynb
+++ b/TEAM-ID_TEAM-NAME_YOUR-NAME_Project-1.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
     "                del_y.append(float(dy))\n",
     "                del_theta.append(float(dtheta))\n",
     "\n",
-    "    return (jnp.array( ind1_arr), jnp.array(ind2_arr), jnp.array(del_x), jnp.array(del_y), jnp.array(del_theta))\n",
+    "    return (jnp.array(ind1_arr), jnp.array(ind2_arr), jnp.array(del_x), jnp.array(del_y), jnp.array(del_theta))\n",
     "\n",
     "def writeVertex(fi,x,y,theta):\n",
     "    f = open(\"dataset/edges-poses.g2o\", 'a')\n",
@@ -378,7 +378,7 @@
     "    f1 = open(\"dataset/edges-poses.g2o\", 'a')\n",
     "\n",
     "    for line in A:\n",
-    "        if \"EDGE_SE2\" in line or \"FIX\" in line:\n",
+    "        if \"EDGE_SE2\" in line:\n",
     "            f1.write(line)\n",
     "def draw(X, Y, THETA):\n",
     "    ax = plt.subplot(111)\n",
@@ -423,6 +423,34 @@
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 500.,    0.,    0., ...,    0.,    0.,    0.],\n",
+       "       [   0.,  500.,    0., ...,    0.,    0.,    0.],\n",
+       "       [   0.,    0.,  500., ...,    0.,    0.,    0.],\n",
+       "       ...,\n",
+       "       [   0.,    0.,    0., ...,  700.,    0.,    0.],\n",
+       "       [   0.,    0.,    0., ...,    0.,  700.,    0.],\n",
+       "       [   0.,    0.,    0., ...,    0.,    0., 1000.]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights= np.vstack((np.ones((n,1))*500,np.ones((20,1))*700))\n",
+    "weights = np.vstack((weights,np.array([1000])))\n",
+    "omega = np.multiply(weights.T,np.eye(140))\n"
    ]
   },
   {
