--- a/18_french-biriyani_Dipanwita_Project-1.ipynb
+++ b/18_french-biriyani_Dipanwita_Project-1.ipynb
@@ -5,10 +5,11 @@
    "metadata": {},
    "source": [
     "# Project 1: Pose Graph Optimization (scratch + g2o)\n",
-    "TEAM-ID:     \n",
-    "TEAM-NAME:        \n",
-    "YOUR-ID:      \n",
-    "YOUR-NAME:     \n",
+    "TEAM-ID: 18    \n",
+    "TEAM-NAME: french-biriyani       \n",
+    "YOUR-ID:     2018112004 \n",
+    "\n",
+    "YOUR-NAME:     Dipanwita Guhathakurta\n",
     "\n",
     "(Although you work in groups, both the students have to submit to Moodle, hence there's name field above)"
    ]
@@ -1720,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1730,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,12 +1747,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "RPE w.r.t. translation part (m)\n",
+    "for delta = 1 (frames) using consecutive pairs\n",
+    "(not aligned)\n",
+    "\n",
+    "       max\t0.286835\n",
+    "      mean\t0.116623\n",
+    "    median\t0.108889\n",
+    "       min\t0.006303\n",
+    "      rmse\t0.132587\n",
+    "       sse\t2.091950\n",
+    "       std\t0.063075\n",
+    "--------------------------------------------------------------------------------\n",
+    "APE w.r.t. translation part (m)\n",
+    "(not aligned)\n",
+    "\n",
+    "       max\t10.090109\n",
+    "      mean\t5.240147\n",
+    "    median\t5.598720\n",
+    "       min\t0.000000\n",
+    "      rmse\t6.095289\n",
+    "       sse\t4458.305766\n",
+    "       std\t3.113424\n",
+    "--------------------------------------------------------------------------------\n",
+    "name:\tgt\n",
+    "infos:\n",
+    "\n",
+    "\tnr. of poses\t120\n",
+    "\tpath length (m)\t52.976517997999295\n",
+    "\tpos_end (m)\t[-2.8 -4.5  0. ]\n",
+    "\tpos_start (m)\t[-8.  5.  0.]\n",
+    "--------------------------------------------------------------------------------\n",
+    "name:\topt\n",
+    "infos:\n",
+    "\n",
+    "\tnr. of poses\t120\n",
+    "\tpath length (m)\t53.77212243905029\n",
+    "\tpos_end (m)\t[-0.19046097  3.8750834   0.        ]\n",
+    "\tpos_start (m)\t[-8.  5.  0.]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### EVO outputs for info 10,500,700"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1806,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,12 +1823,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "RPE w.r.t. translation part (m)\n",
+    "for delta = 1 (frames) using consecutive pairs\n",
+    "(not aligned)\n",
+    "\n",
+    "       max\t0.296654\n",
+    "      mean\t0.117387\n",
+    "    median\t0.112351\n",
+    "       min\t0.010928\n",
+    "      rmse\t0.132732\n",
+    "       sse\t2.096530\n",
+    "       std\t0.061953\n",
+    "--------------------------------------------------------------------------------\n",
+    "APE w.r.t. translation part (m)\n",
+    "(not aligned)\n",
+    "\n",
+    "       max\t6.772910\n",
+    "      mean\t1.953010\n",
+    "    median\t1.595805\n",
+    "       min\t0.000347\n",
+    "      rmse\t2.719954\n",
+    "       sse\t887.777994\n",
+    "       std\t1.893120\n",
+    "--------------------------------------------------------------------------------\n",
+    "name:\tgt\n",
+    "infos:\n",
+    "\n",
+    "\tnr. of poses\t120\n",
+    "\tpath length (m)\t52.976517997999295\n",
+    "\tpos_end (m)\t[-2.8 -4.5  0. ]\n",
+    "\tpos_start (m)\t[-8.  5.  0.]\n",
+    "--------------------------------------------------------------------------------\n",
+    "name:\topt1\n",
+    "infos:\n",
+    "\n",
+    "\tnr. of poses\t120\n",
+    "\tpath length (m)\t53.67466588253421\n",
+    "\tpos_end (m)\t[-3.1187325 -1.797597   0.       ]\n",
+    "\tpos_start (m)\t[-8.000337  4.999918  0.      ]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### EVO outputs for info 200,500,700"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1881,7 @@
        "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,13 +1898,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "RPE w.r.t. translation part (m)\n",
+    "for delta = 1 (frames) using consecutive pairs\n",
+    "(not aligned)\n",
+    "\n",
+    "       max\t0.286906\n",
+    "      mean\t0.116642\n",
+    "    median\t0.113920\n",
+    "       min\t0.006024\n",
+    "      rmse\t0.132188\n",
+    "       sse\t2.079367\n",
+    "       std\t0.062195\n",
+    "--------------------------------------------------------------------------------\n",
+    "APE w.r.t. translation part (m)\n",
+    "(not aligned)\n",
+    "\n",
+    "       max\t10.151611\n",
+    "      mean\t5.270521\n",
+    "    median\t5.615299\n",
+    "       min\t0.000000\n",
+    "      rmse\t6.133018\n",
+    "       sse\t4513.668967\n",
+    "       std\t3.136163\n",
+    "--------------------------------------------------------------------------------\n",
+    "name:\tgt\n",
+    "infos:\n",
+    "\n",
+    "\tnr. of poses\t120\n",
+    "\tpath length (m)\t52.976517997999295\n",
+    "\tpos_end (m)\t[-2.8 -4.5  0. ]\n",
+    "\tpos_start (m)\t[-8.  5.  0.]\n",
+    "--------------------------------------------------------------------------------\n",
+    "name:\topt2\n",
+    "infos:\n",
+    "\n",
+    "\tnr. of poses\t120\n",
+    "\tpath length (m)\t53.76395127256726\n",
+    "\tpos_end (m)\t[-0.17437017  3.9343538   0.        ]\n",
+    "\tpos_start (m)\t[-8.  5.  0.]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Comparison of outputs for different info matrices\n",
     "\n",
-    "Info values          |  Final error  |  No. of iterations | EVO_RPE | EVO_APE| EVO_Trajectory\n",
+    "Info values          |  Final error  |  Mean RPE | Mean APE | No. of iterations | EVO_RPE | EVO_APE| EVO_Trajectory\n",
     ":-------------------------:|:-------------------------:| :-------------------------|\n",
-    "500,700,1000   |   444.57623 | 81   | ![rp1](misc/rpe_500_700_1000.png) | ![ap1](misc/ape_500_700_1000.png) | ![t1](misc/traj_500_700_1000.png)\n",
-    "10,500,700     |   10.566054 | 130  | ![rp2](misc/rpe_10_500_700.png) | ![ap2](misc/ape_10_500_700.png) | ![t2](misc/traj_10_500_700.png)\n",
-    "200,500,700     |   183.19394 | 88  | ![rp2](misc/rpe_200_500_700.png) | ![ap2](misc/ape_200_500_700.png) | ![t2](misc/traj_200_500_700.png)"
+    "500,700,1000   |   444.57623 |  0.116623 | 5.240147 | 81 | ![rp1](misc/rpe_500_700_1000.png) | ![ap1](misc/ape_500_700_1000.png) | ![t1](misc/traj_500_700_1000.png)\n",
+    "10,500,700     |   10.566054  | 0.117387 | 1.953010 | 130 |![rp2](misc/rpe_10_500_700.png) | ![ap2](misc/ape_10_500_700.png) | ![t2](misc/traj_10_500_700.png)\n",
+    "200,500,700     |   183.19394  | 0.116642 | 5.270521 | 88 |![rp2](misc/rpe_200_500_700.png) | ![ap2](misc/ape_200_500_700.png) | ![t2](misc/traj_200_500_700.png)"
    ]
   },
   {
